Who Am I? Part A completed

--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -24,7 +24,7 @@
 \begin{titlepage}
     \begin{center}
         \vspace*{1.5in}
-        {\huge\bfseries{Who Am I? DRAFT \#1}}\\
+        {\huge\bfseries{Who Am I?}}\\
             {\bfseries{by Jonah Mondragon}}\\
             World History Period 7\\
             \today
@@ -47,9 +47,9 @@ him. My dad's name is Ernie Mondragon and my mom's name is Lucy Robertson.
 I bear crawled before I crawled normally and, according to my father, ran
 before I walked.  In the courtroom where my parents allowed their lawyers to
 fight for the right of raising me, it was the first time I'd been able to see
-my father in months; <more precise?> I heard his voice and ran down the
+my father in months; I heard his voice and ran down the
 courtroom walkway to him as soon as I was out of my mother's hold, I was three
-years old. <fact check this> The reason for this custody battle boils down to
+years old. The reason for this custody battle boils down to
 the fact that my mother ``kidnapped'' me in the attempt to extricate me from
 the ``abusive'' hands of my father (the exact details of this don't have the
 need to be related here, but know that all is fine with my situation now).  My
@@ -88,19 +88,19 @@ house, a rather small one, and I remember bringing toys of Batman and Shrek to
 this apartment to and from my dad's house, this made the established boundary
 between life with my father and life with my mother less defined.
 
-Dawn had children, I believe two, and they had guinea pigs, likely around two.
-When no one was watching, as I was allowed to play or pet them, I would throw
-the guinea pigs into the air as far up as I could and catch them on the way
-down, they made a squealing noise that I found humorous; but my mom caught me
-doing this one time and told me I could end up hurting them.  Eventually I got
-my own guinea pig, far later in my life as my mother was no longer living in
-the country, and still not seeing how I could hurt it I threw it up into the
-air the same way as the guinea pigs belonging to Dawn's kids.  I don't remember
-if at one time I didn't catch it, it had a heart attack or it simply stopped
-breathing, but it died because of what I was doing, I placed the poor thing
-into it's cage and pretended to sleep; I still hold back tears a little bit as
-I remember my dad looking into the cage to try and play with it (I don't
-remember its gender or its name) and noticing that it wasn't breathing.
+Dawn had two children and they had guinea pigs. When no one was watching, as
+I was allowed to play or pet them, I would throw the guinea pigs into the air as
+far up as I could and catch them on the way down, they made a squealing noise
+that I found humorous; but my mom caught me doing this one time and told me
+I could end up hurting them.  Eventually I got my own guinea pig, far later in
+my life as my mother was no longer living in the country, and still not seeing
+how I could hurt it I threw it up into the air the same way as the guinea pigs
+belonging to Dawn's kids.  I don't remember if at one time I didn't catch it, it
+had a heart attack or it simply stopped breathing, but it died because of what
+I was doing, I placed the poor thing into it's cage and pretended to sleep;
+I still hold back tears a little bit as I remember my dad looking into the cage
+to try and play with it (I don't remember its gender or its name) and noticing
+that it wasn't breathing.
 
 My first shot with a gun was a bullseye (which happened sometime before or
 around the age of seven), my dad got an empty soup can with a quality badge
@@ -122,53 +122,53 @@ that everyone around me has tried to present my ``potential,'' as they say to
 me; I believe that same potential exists in everybody, and perhaps I could do
 something to help them realize it.
 
-One of my memories with my mother is my in the backseat of her car, I was
-around eight years old at the time and she wouldn't allow me to sit in the
-front seat, she had just finished telling me that warm water is better for you
-than cold water, but that drinking warm water from a plastic bottle isn't as
-particles from the bottle end up in the water and therefore into your body,
-when she withdrew from a freshly acquired {\color{blue}\underline{\href
+One of my memories with my mother is my in the backseat of her car, I was around
+eight years old at the time and she wouldn't allow me to sit in the front seat,
+she had just finished telling me that warm water is better for you than cold
+water, but that drinking warm water from a plastic bottle isn't as particles
+from the bottle end up in the water and therefore into your body, when she
+withdrew from a freshly acquired {\color{blue}\underline{\href
 {https://www.cidsfoodmarket.com/}{Cid's Food Market}}} shopping bag a container
 of peculiar green meat cubes, beef, and she offered it to me. I loved the stuff
-enough and in my inquisitive nature I asked her why it was green, I don't
+enough that, in my inquisitive nature, I asked her why it was green, I don't
 remember what reason she gave for the color but she mentioned that it came from
 a cow. This wasn't the first I'd heard about the farming of animals and I had
 long since accepted the fact that other things would die so that I would live,
-but for some reason, perhaps it was the color of the meat, or its flavor, or
-the name and logo of the brand that sold it that got me in this specific
-instance it hit me in a particular way and I started to cry; it seemed such a
-cruel injustice that it would be so flavorful and yet in such vain that a cow
-was killed in order to be sliced up into cubes and placed into a container for
-me to eat. I'm not a vegetarian, but in that moment I was considering it.
+but for some reason, perhaps it was the color of the meat, or its flavor, or the
+name and logo of the brand that sold it that in this specific instance it hit me
+in a particular way such that I started to cry; it seemed such a cruel injustice
+that it would be so flavorful but that such vain could exist for a cow to be
+killed in order to get sliced up into cubes and placed into a container. I'm not
+a vegetarian, but in that moment I was considering becoming one.
 
 After a certain point my father had full custody over me (perhaps he had full
 custody over me ever since the initial court settlement, I don't actually
 remember) but he allowed time for me to be with my mom, he recognized, and
-continues to, the role a mother plays in one's life. There was a man named
-Eliot that me and my mom would frequent, the best way I could describe him
-would be as real life Mr.\ Miyagi, he's an elderly man who maintains great
-physical fitness in his old age through daily physical exercise, using proven
-techniques, and practicing meditation. My mom would come to him for guidance
-and bring me with; I'll still visit him every so often for the same purpose.
-The reason I mention Eliot is that she was the only friend of my mom's that I
-was directly aware of, as in not simply in passing, and she requested of my
-father that I and her spend a few days at a friend's house of whom I was
-unfamiliar, I believe the exact number of days was two. This is not where we
-ended up going. I don't know exactly what occurred, and I have not the
-delegation to inquire, but we arrived to some destination, it was dark and all
-I could see were a few cars parked outside a dimly lit porch, and I stayed in
-the car longer than would have made sense given an overnight visit at a
-friend's house; I fell asleep and when I woke up we were driving through an
-unfamiliar road surrounded by sagebrush.  ``Where are we going?'' I asked, no
-response. The next thing I remember is daytime, I woke up in the backseat and
-at some point my mom asked me if I wanted to see an owl, I believe she gave it
-a name and asked used the name instead of the word ``owl''; we got out and she
-opened the truck, underneath a pile of sheets and blankets there was an injured
-owl, my mom must have found it injured or injured it herself.
+continues to, the role a mother plays in one's life. There was a man named Eliot
+that me and my mom would frequent, the best way I could describe him would be as
+real life Mr.\ Miyagi, he's an elderly man who maintains great physical fitness
+in his old age through daily physical exercise, using proven techniques, and
+practicing meditation. My mom would come to him for guidance and bring me with;
+I'll still visit him every so often for the same purpose. The reason I mention
+Eliot is that she was the only friend of my mom's that I was directly aware of,
+as in not simply in passing, and she requested of my father that I and her spend
+a few days at a friend's house of whom I was unfamiliar, I believe the exact
+number of days was two. This is not where we ended up going. I don't know
+exactly what occurred, and I have not the delegation to inquire, but we arrived
+to some destination, it was dark and all I could see were a few cars parked
+outside a dimly lit porch, and I stayed in the car longer than would have made
+sense given an overnight visit at a friend's house; I fell asleep and when
+I woke up we were driving through an unfamiliar road surrounded by sagebrush.
+``Where are we going?'' I asked, no response. The next thing I remember is
+daytime, I woke up in the backseat and at some point my mom asked me if I wanted
+to see an owl, I believe she used the name she had gave it instead of the word
+``owl''; we got out and she opened the truck, underneath a pile of sheets and
+blankets there was an injured owl, my mom must have found it injured or injured
+it herself.
 
 ``Why do you have it in the trunk, mom?'' I said; keep in mind I don't remember
-exactly the words used, or even if they're spoken at all; this is purely from
-my memory.
+exactly the words used, or even if they're spoken at all; this is purely from my
+memory.
 
 ``Because owls don't like the dark better than the day.'' She must have used an
 example to compare the owl to, as that is her nature.
@@ -178,47 +178,48 @@ on a small dirt road surrounded by sagebrush, a familiar scene, with an
 accompanying forest to our left; to our right was a magnificent black mountain
 that looked like a mountain I had seen out of
 {\color{blue}\underline{\href{https://www.history.com/shows/ancient-aliens}
-{Ancient Aliens}}}, my father is a fan of the show, where there was some sort
-of snake being with carvings on the walls and it would kill you if you got too
+{Ancient Aliens}}}, my father is a fan of the show, where there was some sort of
+snake being with carvings on the walls and it would kill you if you got too
 close; I don't remember the exact details. We turned left off of the dirt road
 that led us to the area, my mom had the plan of going for a walk in the woods
-and so we hopped the fence that separated the sagebrush from the forest, I
-didn't want to and I expressed it, we hopped over the fence once again and went
-back into my moms car. At this point we were facing the opposite direction of
-the one that led us there and there was a little building or something along
+and so we hopped the fence that separated the sagebrush from the forest,
+I didn't want to and I expressed it, we hopped over the fence once again and
+went back into my moms car. At this point we were facing the opposite direction
+of the one that led us there and there was a little building or something along
 the border fence with it's area squared off with a gate, the stereotypical farm
-gate that everyone is familiar with; it was facing us and it was going to be a
-bit of a project to get out the way we came without driving over the sagebrush.
-As my mom was beginning to go through the struggle of backing out I told her of
-the mountain I'd seen in Ancient Aliens, apparently it freaked her out because
-she just rammed through the gate and drove out that way; the building was
-accompanied by two of these gates but the second one was open, the one that led
-the rest of the way to the dirt road. While I was associating the nearby
-mountain with the one I saw on Ancient Aliens, I genuinely had the plan of
-telling her; I don't remember if it was to get her to leave the area or because
-I was scared of it, but it accomplished the prior. Along with getting my mom to
-leave the area, my elaboration on the mountain also lead her car to have a
-broken windshield, a hole that went straight through the driver's side of the
-windshield. She tried to cover it up with a piece of cardboard from the trunk
-but it was no use, we drove around with a loud clapping noise every now and
-then and negative cabin pressure.
+gate that everyone is familiar with; it was facing us and it was going to be
+a bit of a project to get out the way we came without driving over the
+sagebrush. As my mom was beginning to go through the struggle of backing out
+I told her of the mountain I'd seen in Ancient Aliens, apparently it freaked her
+out because she just rammed through the gate and drove out that way; the
+building was accompanied by two of these gates but the second one was open, the
+one that led the rest of the way to the dirt road. While I was associating the
+nearby mountain with the one I saw on Ancient Aliens, I genuinely had the plan
+of telling her; I don't remember if it was to get her to leave the area or
+because I was scared of it, but it accomplished the prior. Along with getting my
+mom to leave the area, my elaboration on the mountain also lead her car to have
+a broken windshield, a hole went straight through the driver's side of the
+windshield with shattered glass everywhere. She tried to cover it up with
+a piece of cardboard from the trunk but it was no use, the broken glass
+littering the inside of the car took a while to clean and we drove around with
+a loud clapping noise occurring every now and then and negative cabin pressure.
 
-Eventually my mom got pulled over, my mother answered the cops' questions with a
-fear in her voice, he questioned the hole in the windshield and the damage to
-the front end, I don't remember what her answer was but it's evident that it
-wasn't convincing because I soon found myself in the passenger seat of a cop car
-on my way to an orphanage. The cop got wildlife services to obtain the owl. On
-the way to the orphanage we drove passed a frozen over lake, opposing lanes
-branded around it; there was a car that had falling into the lake, it was upside
-down with another car, it must have been a pretty extreme accident. The cop
-found a way to drive onto the ice, winter must be so severe there that one can
-feel comfortable driving on a frozen lake (I believe we were in Idaho, but again
-I don't feel the need to ask my parents for exact details), he stayed on scene
-helping as much as he could until other cops arrived, he had radioed in that he
-had a kid with him that had to get to the orphanage. I don't remember saying
-anything to the cop, but I was smart enough that I must have given him
-information about my father, we must have talked about the owl and life in
-general, as I have vague images that relate to those concepts.
+Eventually we got pulled over; my mother answered the cops' questions with
+a fear in her voice, he questioned the hole in the windshield and the damage to
+the front end, I don't remember what her answers were but it's evident that they
+wasn't convincing as I soon found myself in the passenger seat of a cop car on
+my way to an orphanage. The cop that pulled us over got wildlife services to
+obtain the owl. On the way to the orphanage we drove past a frozen over lake,
+the opposing lanes branched around it; there was a car that had falling into the
+lake, it was upside down with another car, it must have been a pretty extreme
+accident. The cop found a way to drive onto the ice, winter must be so severe
+there that one can feel comfortable driving on a frozen lake (I believe we were
+in Idaho, but again I don't feel the need to ask my parents for exact details),
+he stayed on scene helping as much as he could until other cops arrived, he had
+radioed in that he had a kid with him that had to get to the orphanage. I don't
+remember saying anything to the cop, but I was smart enough that I must have
+given him information about my father, we must have talked about the owl and
+life in general, as I have vague images that relate to those concepts.
 
 The orphanage was depressing, I was already familiar with what life was like at
 one of them; the caretakers believed that I was to stay there until adulthood
