Hammurabi's Code completed

--- a/7-World_History/hammurabis_code/hammurabis_code.tex
+++ b/7-World_History/hammurabis_code/hammurabis_code.tex
@@ -62,35 +62,44 @@
 
     \item{According to this document, what is the goal of Hammurabi’s Code?}
     \paragraph~
-    The goal of Hammurabi's code is the ``bring about the rule of righteousness.''
-\end{enumerate}
+
+    The goal of Hammurabi's code is the ``bring about the rule of
+    righteousness.'' \end{enumerate}
 
 \section*{Document B: Economy}
-
 \begin{enumerate}
-
 \item{Working the fields: Summarize laws 42-43 in your own words.}
 \begin{enumerate}[42.]
     \item{When borrowing land for the use of cultivation, the borrower must
     still pay the rent for the land even if no crops were grown.}
 \end{enumerate}
 \begin{enumerate}[43.]
-    \item{When borrowing land for cultivation, and the borrower let's the soil become
-    unfertile, he shall grow}
+    \item{When borrowing land for cultivation, and the borrower let's the soil
+    become unfertile, he shall grow}
 \end{enumerate}
 
 \item{The dams: Summarize laws 53-54 in your own words.}
 \begin{enumerate}[53.]
-    \item{Hello}
+    \item{If one fails to maintain their dam and their neglect leads to the dam
+    breaking, they are responsibile for compensating any of the crops lost in
+    others' fields.}
 \end{enumerate}
 \begin{enumerate}[54.]
-    \item{Hello}
+    \item{If one who's dam breaks and damages others' crops cannot compensate
+    the others, then him and all of his processions must be divided among those
+    affected.}
 \end{enumerate}
 
     \item{Type of Economy}
     \begin{enumerate}[1.]
-        \item{According to this document, do you think most people in Babylonia made
-        money in cities or in the country?}
+        \item{According to this document, do you think most people in Babylonia
+        made money in cities or in the country?}
+        \paragraph~
+        The codes of Hammurabi shown in the document all involve the logistics
+        of agricultural land and the distribution and development of crops;
+        therefore I'd imagine money came in the form of grain and most of the
+        money was made from the country areas.
+
         \item{How do you know this from Hammurabi’s Code?}
         \paragraph~
         ``Source: `Code of Hammurabi,' 1780 BCE.''        
@@ -99,32 +108,54 @@
 \end{enumerate}
 
 \section{Document C: Society}
-
- 
-
 \begin{enumerate}
 \item{Equality}
     \begin{enumerate}[1.]
-        \item{Code 196: What is the punishment for putting out the eye of “another
-            man”?}
+        \item{Code 196: What is the punishment for putting out the eye of
+        ``another man?''}
+        \paragraph~
+        The eye of the man the put out the eye of the other, shall also have his
+        eye put out.
 
         \item{How might code 196 be seen as an attempt to promote “equality”?}
+        \paragraph~
+        Code 196 may be considered an attempt to promote equality as by the
+        decree of the code, any man who wrongfully afflicts another will have
+        the same wrongful affliction done upon them in return, and it doesn't
+        discuss what would occur based on social status.
 
-        \item{Code 199 describes a different punishment for putting out the eye of
-            an enslaved What might this suggest about equality in Babylonia?}
+        \item{Code 199 describes a different punishment for putting out the eye
+        of an enslaved. What might this suggest about equality in Babylonia?}
+        \paragraph~
+        Those that were considered slaves were only considered at the value of
+        money, as the only punishment for wrongfully afflicting upon another's
+        slave is to pay of the slave's value.
 
         \item{Find two other passages that provide evidence of inequality in
         Hammurabi’s (Be sure to cite the number of the code.)}
         \begin{enumerate}[1.]
-            \item{Evidence 1:}
-            \item{Evidence 2:}
+            \item{Code 202 stats that if one strikes the body of one above him,
+            then he shall get whipped with an ox whip sixty times; this is
+            evidence of inequality as, in conjecture, it wouldn't work the other
+            way around.}
+
+            \item{Code 203 states that if one strikes another free-born man of
+            equal rank, that he only needs to pay one gold mina, whatever that
+            is, which implies that if the man that was stricken was below is
+            rank, or of slave status, there would be no punishment.}
         \end{enumerate}
     \end{enumerate}
  
-\item{What do codes 117, 138, & 141 suggest about the status of women in
+\item{What do codes 117, 138, \& 141 suggest about the status of women in
 Babylonian society?}
 
-
+\paragraph~
+Based on the Hammurabi codes 117, 138 and 141, women had a lower social status
+then men, as well as children; they can be sold for labor, even though the time
+of labor is limited to only three years; a man doesn't quarrel about a divorce
+from a woman when not married; marriage is only broken because of the wish of
+the wife if the husband allows it, if he doesn't and he takes another then the
+first wife must stay as a servant to the husband.
 
 \end{enumerate}
 
