Fixed section stupidity in Hammurabi's Code

--- a/7-World_History/hammurabis_code/hammurabis_code.tex
+++ b/7-World_History/hammurabis_code/hammurabis_code.tex
@@ -38,7 +38,7 @@
 
 \doublespacing
 
-\section{Document A: Religion}
+\section*{Document A: Religion}
 
 \begin{enumerate}
     \item{According to this document, where did Hammurabi get his power as
@@ -107,7 +107,7 @@
     \end{enumerate}
 \end{enumerate}
 
-\section{Document C: Society}
+\section*{Document C: Society}
 \begin{enumerate}
 \item{Equality}
     \begin{enumerate}[1.]
