--- a/6-Honors_Physics/tumble_buggy_position_vs_time/tumble_buggy_position_vs_time.tex
+++ b/6-Honors_Physics/tumble_buggy_position_vs_time/tumble_buggy_position_vs_time.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage{longtable}
 \usepackage{titling}
 \usepackage{setspace}
 \usepackage{hyperref}
@@ -7,8 +8,7 @@
 \usepackage[margin=1in]{geometry}
 
 \newcommand{\PutTitle}[1]
-{
-    \begin{center}
+{ \begin{center}
         {\huge\bfseries\thetitle}\\
         by \theauthor\\
         \thedate\\
@@ -31,22 +31,62 @@
 
 \begin{document}
 
-\title{Title}
+\title{Tumble Buggy}
 \author{Jonah Mondragon}
 \date{\today}
-\PutTitle{Period 6}
+\PutTitle{Physics Period 6}
 
 \doublespacing
 
-% Description goes here as follows:
-% Purpose:
-% Procedures: (pictures/diagrams)
-% Data/observations
-% Conclusion: Problem, equation, statement (pictures/diagrams)
+The purpose is to devise an experiment that will demonstrate the principals of
+constant speed.
+
+\begin{center}
+\includegraphics[width=4.25in]{tumble_buggy.jpg}
+\end{center}
+
+The methodology for this experiment will involve measuring the speed of the
+above toy tumble buggy. Simply measuring the time it takes to travel a distance
+won't accomplish this endeavor as it won't incorporate position further than
+that determined by the chosen distance; therefore I've elected to measure the
+linear distance from a starting point to points determined by an interval of
+two seconds. The latter approach incorporates position and compares it to time;
+and linearly measuring the growth in distance from the starting point at every
+interval will accommodate the slight curve this tumble buggy tends to drive in.
+The intervals will be marked with sandbags, they'll be dropped at the position
+the tumble buggy is in at the end of every interval, after five intervals, the
+distance will be measured from the starting point to each sandbag and then
+input into the data into a table, then the process will be repeated two more
+times; then it's a simple matter of graphing with Excel (the resulting table
+can be seen on page \pageref{table} and the resulting graph can be seen on page
+\pageref{graph}).
+
+\newpage
+
+\begin{table}
+    \centering
+    Tumble Buggy Position vs. Time\\
+    \begin{tabular}{|l|l|l|l|}
+    \hline
+        Period (seconds) & Trial 1 & Trial 2 & Trial 3 \\ \hline
+        2 & 0.71 & 0.757 & 0.64 \\ \hline
+        4 & 1.27 & 1.25 & 1.01 \\ \hline
+        6 & 1.85 & 1.62 & 1.54 \\ \hline
+        8 & 2.35 & 2.17 & 1.98 \\ \hline
+        10 & 2.83 & 2.67 & 2.35 \\ \hline
+    \end{tabular}
+\end{table}
+\label{table}
 
 \begin{center}
 \includegraphics{tumble_buggy_position_vs_time_graph.pdf}
+\label{graph}
 \end{center}
+
+As we can see from the data above, the tumble buggy moves at a constant speed
+of, taking the average from the three trials, 27.11 centimeters per second. We
+see from the equations in the graph that we have accurate results as the $R^2$
+value is extremely close to $1$ for all three trials.
 
 \end{document}
 
