Progress on preterite quiz

--- a/8-Spanish_II/the_preterite_choose_one/the_preterite_choose_one.tex
+++ b/8-Spanish_II/the_preterite_choose_one/the_preterite_choose_one.tex
@@ -5,6 +5,7 @@
 \usepackage{lipsum}
 \usepackage[spanish]{babel}
 \usepackage{scrextend}
+\usepackage[shortlabels]{enumitem}
 \usepackage[margin=1in]{geometry}
 
 \newcommand{\PutTitle}[1]
@@ -35,7 +36,7 @@
 \title{The Preterite Choose One}
 \author{Jonah Mondragon}
 \date{\today}
-\PutTitle{Periodo español 8}
+\PutTitle{Período español octavo}
 
 \doublespacing
 
@@ -47,31 +48,25 @@ I chose to do the quiz for this assignment.
 \end{center}
 
 \begin{enumerate}
-\item{Fill in the blanks}
+\item{Fill in the blank in the sentence:}
     \begin{addmargin}[24pt]{0pt}
-    El sol brill\rule[-0.5pt]{5ex}{0.4pt} brillante ayer.
+    El sol brill\rule[-0.75pt]{5ex}{0.4pt} brillante ayer.
     \end{addmargin}
+\item{Fill in the blanks on the table.}
+    \begin{table}[h]
+        \centering
+        Conjugaciones del pretérito\\
+        \begin{tabular}{|l|l|l|l|}
+        \hline
+            (Leave this spot blank) & -ar & -ir & -er \\ \hline
+            Yo & & & \\ \hline
+            Tú & & & -iste \\ \hline
+            Él/Ella/Usted &  & -ió & \\ \hline
+            nosotros & -amos & -imos &  \\ \hline
+            ellos/ellasa/ustedes &  &  & -ieron \\ \hline
+        \end{tabular}
+    \end{table}
 \item{}
-    \begin{addmargin}[24pt]{0pt}
-    \end{addmargin}
-\item{}
-    \begin{addmargin}[24pt]{0pt}
-    \end{addmargin}
-\item{}
-    \begin{addmargin}[24pt]{0pt}
-    \end{addmargin}
-\item{}
-    \begin{addmargin}[24pt]{0pt}
-    \end{addmargin}
-\item{}
-    \begin{addmargin}[24pt]{0pt}
-    \end{addmargin}
-\item{}
-    \begin{addmargin}[24pt]{0pt}
-    \end{addmargin}
-\item{}
-    \begin{addmargin}[24pt]{0pt}
-    \end{addmargin}
 \end{enumerate}
 
 \end{document}
